--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -77,56 +77,61 @@ jobs:
           # Force PATH refresh and hash table reset
           hash -r
           
-          # Verify critical build tools are installed using direct paths first
+      - name: Verify build tools
+        shell: bash
+        env:
+          MSYSTEM: MINGW64
+          PATH: /mingw64/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
+        run: |
           echo "Verifying build tools installation:"
           
           # Check cmake
-          if [ -f "/mingw64/bin/cmake.exe" ]; then
+          if which cmake; then
+            echo "cmake found in PATH: $(which cmake)"
+            cmake --version || echo "Warning: Could not get cmake version"
+            CMAKE_FOUND=true
+          elif [ -f "/mingw64/bin/cmake.exe" ]; then
             echo "cmake found at: /mingw64/bin/cmake.exe"
-            CMAKE_FOUND=true
             /mingw64/bin/cmake.exe --version | head -1 || echo "Warning: Could not get cmake version"
-          elif command -v cmake >/dev/null 2>&1; then
-            echo "cmake found in PATH: $(command -v cmake)"
             CMAKE_FOUND=true
-            cmake --version | head -1 || echo "Warning: Could not get cmake version"
           else
             echo "ERROR: cmake not found"
             CMAKE_FOUND=false
           fi
           
           # Check ninja
-          if [ -f "/mingw64/bin/ninja.exe" ]; then
-            echo "ninja found at: /mingw64/bin/ninja.exe"
-            NINJA_FOUND=true
-            /mingw64/bin/ninja.exe --version || echo "Warning: Could not get ninja version"
-          elif command -v ninja >/dev/null 2>&1; then
-            echo "ninja found in PATH: $(command -v ninja)"
-            NINJA_FOUND=true
+          if which ninja; then
+            echo "ninja found in PATH: $(which ninja)"
             ninja --version || echo "Warning: Could not get ninja version"
+            NINJA_FOUND=true
+          elif [ -f "/mingw64/bin/ninja.exe" ]; then
+            echo "ninja found at: /mingw64/bin/ninja.exe"
+            /mingw64/bin/ninja.exe --version || echo "Warning: Could not get ninja version"
+            NINJA_FOUND=true
           else
             echo "ERROR: ninja not found"
             NINJA_FOUND=false
           fi
           
           # Check gcc
-          if [ -f "/mingw64/bin/gcc.exe" ]; then
+          if which gcc; then
+            echo "gcc found in PATH: $(which gcc)"
+            gcc --version || echo "Warning: Could not get gcc version"
+            GCC_FOUND=true
+          elif [ -f "/mingw64/bin/gcc.exe" ]; then
             echo "gcc found at: /mingw64/bin/gcc.exe"
-            GCC_FOUND=true
             /mingw64/bin/gcc.exe --version | head -1 || echo "Warning: Could not get gcc version"
-          elif command -v gcc >/dev/null 2>&1; then
-            echo "gcc found in PATH: $(command -v gcc)"
             GCC_FOUND=true
-            gcc --version | head -1 || echo "Warning: Could not get gcc version"
           else
             echo "ERROR: gcc not found"
             GCC_FOUND=false
           fi
           
           # Check curl
-          if [ -f "/mingw64/bin/curl.exe" ]; then
+          if which curl; then
+            echo "curl found in PATH: $(which curl)"
+          elif [ -f "/mingw64/bin/curl.exe" ]; then
             echo "curl found at: /mingw64/bin/curl.exe"
-          elif command -v curl >/dev/null 2>&1; then
-            echo "curl found in PATH: $(command -v curl)"
           else
             echo "ERROR: curl not found"
           fi
@@ -139,6 +144,7 @@ jobs:
           fi
           
           echo "All critical build tools found."
+
 
       - name: Cache Zig source
         uses: actions/cache@v4
@@ -331,6 +337,7 @@ jobs:
 
           cat > ../stage1/config.zig.in << 'EOF'
           pub const version_string = "@ZIG_VERSION@"; 
+          pub const version = "@ZIG_VERSION@";  // Add this line to match what src/main.zig expects
           pub const version_major = @ZIG_VERSION_MAJOR@; 
           pub const version_minor = @ZIG_VERSION_MINOR@; 
           pub const version_patch = @ZIG_VERSION_PATCH@;
@@ -338,7 +345,7 @@ jobs:
           pub const debug_gpa = false;
           pub const enable_tracy = false;
           EOF
-
+          
       - name: Build Zig (Stage 1 - CMake)
         shell: bash
         env:
